# pipeworkmc-server

./: Cargo.toml  README.md  todo.md
examples/: hello_world.rs
src/: lib.rs
src/conn/: mod.rs
src/conn/peer/: event.rs  mod.rs  read_decode.rs  write_encode.rs
src/conn/peer/event/: handshake.rs  login.rs  mod.rs  status.rs
src/conn/peer/event/config/: login_flow.rs  mod.rs
src/conn/peer/event/handshake/: intention.rs  mod.rs
src/conn/peer/event/login/: flow.rs  mod.rs
src/conn/peer/event/play/: keepalive.rs  mod.rs
src/conn/peer/event/status/: mod.rs  ping.rs  request.rs
src/conn/protocol/: mod.rs
src/conn/protocol/codec/decode/: array.rs  mod.rs  num.rs  string.rs  vec.rs
src/conn/protocol/codec/encode/: mod.rs  num.rs  option.rs  refs.rs  slice.rs  str.rs  tuple.rs
src/conn/protocol/packet/: mod.rs
src/conn/protocol/packet/c2s/: mod.rs
src/conn/protocol/packet/c2s/login/: mod.rs  (+4 more)
src/conn/protocol/packet/s2c/: mod.rs
src/conn/protocol/value/: action.rs  bounded_string.rs  channel_data.rs  client_info.rs  ident.rs  itemstack.rs  mod.rs  profile.rs  varint.rs
src/conn/protocol/value/dialog/: mod.rs
src/conn/protocol/value/profile/: deser.rs  mod.rs
src/conn/protocol/value/text/: fmt.rs  mod.rs  ser.rs
src/conn/protocol/version/: gen.py  mod.rs  out.rs
src/data/: action.rs  block_pos.rs  bounded_string.rs  box_cow.rs  channel_data.rs  client_info.rs  colour.rs  game_mode.rs  itemstack.rs  light_level.rs  mod.rs  particle.rs  redacted.rs  tag_ident.rs  varint.rs
src/data/character/: mod.rs
src/data/dialog/: mod.rs
src/data/nbt/ser/: map.rs  mod.rs  root.rs
src/data/num/: mod.rs  multiple16.rs  provider.rs
src/data/profile/: deser.rs  mod.rs
src/data/registry_entry/: banner_pattern.rs  cat_variant.rs  chat_type.rs  chicken_variant.rs  cow_variant.rs  damage_type.rs  dimension_type.rs  frog_variant.rs  mod.rs  painting_variant.rs  pig_variant.rs  trim_material.rs  trim_pattern.rs  wolf_sound_variant.rs  wolf_variant.rs
src/data/registry_entry/worldgen/: biome.rs  mod.rs
src/data/text/: fmt.rs  mod.rs  ser.rs
src/ecs/: mod.rs  par_eventwriter.rs
src/game/: mod.rs
src/game/character/: mod.rs  vis.rs
src/game/character/player/: dimension.rs  mod.rs
src/game/login/: approve.rs  auto.rs  logged_in.rs  logged_out.rs  mod.rs  request.rs
src/game/player/: flags.rs  mod.rs
src/game/player/data/: dimension.rs  mod.rs
src/game/player/login/: approve.rs  auto.rs  logged_in.rs  mod.rs  request.rs
src/game/status/: auto.rs  mod.rs
src/peer/: keepalive.rs  mod.rs  plugin.rs
src/peer/event/: received.rs  send.rs
src/peer/event.old/config/: mod.rs
src/peer/event.old/login/: flow.rs
src/peer/flow/: handshake.rs  mod.rs  status.rs
src/peer/flow/login/: approve.rs  encrypt.rs  finish.rs  mod.rs  start.rs
src/peer/flow/login/mojauth/: mod.rs  uri.rs
src/peer/message/: mod.rs  received.rs  send.rs
src/peer/peer/: write_encode.rs
src/peer/reader/: decode.rs  mod.rs  read.rs
src/peer/state/: mod.rs  timeout.rs
src/peer/writer/: mod.rs  sender.rs  write.rs
src/util/: channel_pair.rs  ext.rs  mod.rs  option.rs  par_eventwriter.rs  vecdeque.rs
(+41 files in other folders)
