[package]
name = "pipeworkmc-server"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"
# TODO: missing_docs = "deny"
[lints.clippy]
missing_safety_doc = "allow" # TODO: Remove


# ECS

[dependencies.bevy_app]
version = "0.16"

[dependencies.bevy_ecs]
version  = "0.16"
features = [ "multi_threaded" ]

[dependencies.bevy_tasks]
version = "0.16"

# Encryption & Serialisation

[dependencies.hex]
version = "0.4"

[dependencies.openssl]
version = "0.10"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.zeroize]
version = "1.8"

# Values

[dependencies.ethnum]
version = "1.5"

[dependencies.rand]
version = "0.9"

[dependencies.uuid]
version  = "1.18"
features = [ "serde", "v3" ]

# Communication

[dependencies.surf]
version = "2.3"
