[package]
name    = "pipeworkmc-server"
version = "0.1.0"
edition = "2024"

[features]
default = [ "mojauth" ]
mojauth = [ "dep:surf" ]

[lints.rust]
unused_parens = "allow"
missing_docs  = "deny"
[lints.clippy]
double_parens   = "allow"
type_complexity = "allow"


[dependencies.pipeworkmc-codec]
path = "../pipeworkmc-codec"

[dependencies.pipeworkmc-data]
path     = "../pipeworkmc-data"
features = [ "bevy", "generated" ]

[dependencies.pipeworkmc-packet]
path = "../pipeworkmc-packet"

# ECS

[dependencies.bevy_app]
version = "0.17"

[dependencies.bevy_callback]
git    = "https://github.com/Totobird-Creations/bevy_callback"
branch = "main"

[dependencies.bevy_ecs]
version  = "0.17"
features = [ "multi_threaded" ]

[dependencies.bevy_eqchanged]
git    = "https://github.com/Totobird-Creations/bevy_eqchanged"
branch = "main"

[dependencies.bevy_parmessagewriter]
git    = "https://github.com/Totobird-Creations/bevy_parmessagewriter"
branch = "main"

[dependencies.bevy_tasks]
version = "0.17"

[dependencies.bevy_time]
version = "0.17"

# Encryption & Serialisation

[dependencies.hex]
version = "0.4"

[dependencies.openssl]
version = "0.10"

# Values

[dependencies.ethnum]
version = "1.5"

[dependencies.rand]
version = "0.9"

# Communication

[dependencies.surf]
version  = "2.3"
optional = true
